continuando testing dte

--- a/DTE_TESTING.ipynb
+++ b/DTE_TESTING.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,14 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_27708\\3997572139.py:58: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_6644\\3997572139.py:58: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql(query, connection)\n"
      ]
     },
@@ -121,7 +121,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-05-23\n",
+      "2024-05-26\n",
       "2024-04-01\n"
      ]
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -221,8 +221,7 @@
      "text": [
       "31-03-2024\n",
       "Comenzando descarga\n",
-      "C:\\Users\\jadurian\\Documents\\Tapi\\.DTE\\31-03-2024.zip\n",
-      "accediendo al zip\n"
+      "C:\\Users\\jadurian\\Documents\\Tapi\\.DTE\\DTE2403.zip\n"
      ]
     }
    ],
@@ -256,18 +255,29 @@
     "    #descargar el .zip del doc_id\n",
     "    \n",
     "    try:\n",
-    "        with requests.get(url_zip) as response:\n",
-    "            if response.status_code == 200:\n",
+    "        \n",
+    "        with requests.get(url_zip) as response: #get request al url del zip\n",
+    "            if response.status_code == 200: # check response ok\n",
     "                print(\"Comenzando descarga\")\n",
-    "                \n",
-    "                nombre_archivo = f\"{dia_iteracion}.zip\"\n",
-    "                path_completo = os.path.join(zip_path, nombre_archivo)\n",
+    "                with zipfile.ZipFile(io.BytesIO(response.content)) as z:\n",
     "\n",
-    "                print(path_completo)\n",
-    "\n",
+    "                    zip_name = z.namelist()[0]\n",
+    "                    #nombre_archivo = f\"{dia_iteracion}.zip\"\n",
+    "                    #path_completo = os.path.join(zip_path, nombre_archivo)\n",
+    "                    \n",
+    "                    z.extractall(f\"{zip_path}\\{zip_name}\")\n",
     "                \n",
-    "                with open(path_completo, 'wb') as file:\n",
-    "                    file.write(response.content)\n",
+    "                path_zip_dia = f\"{zip_path}\\{zip_name}\"\n",
+    "\n",
+    "                print(path_zip_dia)\n",
+    "                \n",
+    "                continue\n",
+    "                with zipfile.ZipFile(path_zip_dia, 'r') as zip_ref:\n",
+    "                    # Encontrar el nombre del archivo MDB dentro del ZIP diario\n",
+    "                    #archivo_mdb = os.path.splitext(zip_name)[0] + \".mdb\"\n",
+    "                    #zip_ref.extract(archivo_mdb, path=\".zips\\ex\")\n",
+    "                    #print(zip_name)\n",
+    "                    zip_ref.extractall(f\".zips\\ex\\{zip_name}\")\n",
     "\n",
     "            else:\n",
     "                print(\"La solicitud falló con el código de estado:\", response.status_code)\n",
@@ -279,7 +289,8 @@
     "    except zipfile.BadZipFile as e:\n",
     "        # Manejar la excepción si el archivo no es un ZIP válido\n",
     "        print(\"El archivo descargado no es un archivo ZIP válido:\", e)\n",
-    "        \n",
+    "    \n",
+    "    continue\n",
     "    #Colocar los PATHs correctos donde se traeran los archivos\n",
     "    \n",
     "    try:\n",
@@ -289,7 +300,7 @@
     "            # Encontrar el nombre del archivo MDB dentro del ZIP diario\n",
     "            #archivo_mdb = os.path.splitext(zip_name)[0] + \".mdb\"\n",
     "            zip_ref.extractall(mdb_path)\n",
-    "        continue\n",
+    "        \n",
     "        # Lee el archivo MDB y cargar la tabla VALORES_GENERADORES en un dataframe\n",
     "        mdb_file = os.path.join(mdb_path, archivo_mdb)\n",
     "        conn_str = f\"Driver={{Microsoft Access Driver (*.mdb, *.accdb)}};DBQ={mdb_file};\"\n",
@@ -379,15 +390,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_GenTER"
+    "import requests\n",
+    "import zipfile\n",
+    "import io\n",
+    "import os\n",
+    "\n",
+    "url = \"https://api.cammesa.com/pub-svc/public/findAllAttachmentZipByNemoId?docId=FFABF73C69B006BD03258B18002191F9&nemo=DTE_EMISION\"\n",
+    "#url = \"https://api.cammesa.com/pub-svc/public/findAllAttachmentZipByNemoId?docId=FD2C3B3F0D5A9C6803258AF5000114C9&nemo=PARTE_POST_OPERATIVO\"\n",
+    "try:\n",
+    "    with requests.get(url) as response:\n",
+    "        if response.status_code == 200:\n",
+    "\n",
+    "            # Crear un objeto ZipFile a partir del contenido descargado\n",
+    "            z = zipfile.ZipFile(io.BytesIO(response.content))\n",
+    "\n",
+    "            # Directorio de destino para extraer los archivos ZIP\n",
+    "            destination_directory = \".zips\"\n",
+    "\n",
+    "            # Extraer todos los archivos del ZIP en el directorio específico\n",
+    "            z.extractall(destination_directory)\n",
+    "            zip_name = z.namelist()[0]\n",
+    "        else:\n",
+    "            print(\"La solicitud falló con el código de estado:\", response.status_code)\n",
+    "        \n",
+    "        path_zip_dia = f\".zips\\{zip_name}\"\n",
+    "\n",
+    "        #print(path_zip_dia)\n",
+    "\n",
+    "        with zipfile.ZipFile(path_zip_dia, 'r') as zip_ref:\n",
+    "            # Encontrar el nombre del archivo MDB dentro del ZIP diario\n",
+    "            #archivo_mdb = os.path.splitext(zip_name)[0] + \".mdb\"\n",
+    "            #zip_ref.extract(archivo_mdb, path=\".zips\\ex\")\n",
+    "            #print(zip_name)\n",
+    "            zip_ref.extractall(f\".zips\\ex\\{zip_name}\")\n",
+    "except requests.exceptions.RequestException as e:\n",
+    "    # Manejar la excepción\n",
+    "    print(\"Error al realizar la solicitud:\", e)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
