--- a/DTE_TESTING.ipynb
+++ b/DTE_TESTING.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,14 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_6644\\3997572139.py:58: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_3752\\3997572139.py:58: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql(query, connection)\n"
      ]
     },
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
     "\n",
     "\n",
     "zip_path = r\"C:\\Users\\jadurian\\Documents\\Tapi\\.DTE\"\n",
-    "mdb_path = r\"C:\\Users\\jadurian\\Documents\\Tapi\\.DTE\\.mdb\"\n",
+    "mdb_path = r\"C:\\Users\\jadurian\\Documents\\Tapi\\.DTE\\.ex\"\n",
     "\n",
     "connection_string = f'DRIVER=ODBC Driver 17 for SQL Server;SERVER={server};DATABASE={database};Trusted_Connection=yes;'\n",
     "\n",
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -220,8 +220,7 @@
      "output_type": "stream",
      "text": [
       "31-03-2024\n",
-      "Comenzando descarga\n",
-      "C:\\Users\\jadurian\\Documents\\Tapi\\.DTE\\DTE2403.zip\n"
+      "Comenzando descarga\n"
      ]
     }
    ],
@@ -259,25 +258,19 @@
     "        with requests.get(url_zip) as response: #get request al url del zip\n",
     "            if response.status_code == 200: # check response ok\n",
     "                print(\"Comenzando descarga\")\n",
-    "                with zipfile.ZipFile(io.BytesIO(response.content)) as z:\n",
+    "                r = requests.get(url_zip)\n",
     "\n",
-    "                    zip_name = z.namelist()[0]\n",
-    "                    #nombre_archivo = f\"{dia_iteracion}.zip\"\n",
-    "                    #path_completo = os.path.join(zip_path, nombre_archivo)\n",
+    "                with zipfile.ZipFile(io.BytesIO(r.content)) as z:\n",
     "                    \n",
-    "                    z.extractall(f\"{zip_path}\\{zip_name}\")\n",
-    "                \n",
-    "                path_zip_dia = f\"{zip_path}\\{zip_name}\"\n",
+    "                    zip_name = z.namelist()[0]\n",
+    "                    z.extractall(zip_path+zip_name)\n",
     "\n",
-    "                print(path_zip_dia)\n",
-    "                \n",
-    "                continue\n",
-    "                with zipfile.ZipFile(path_zip_dia, 'r') as zip_ref:\n",
-    "                    # Encontrar el nombre del archivo MDB dentro del ZIP diario\n",
-    "                    #archivo_mdb = os.path.splitext(zip_name)[0] + \".mdb\"\n",
-    "                    #zip_ref.extract(archivo_mdb, path=\".zips\\ex\")\n",
-    "                    #print(zip_name)\n",
-    "                    zip_ref.extractall(f\".zips\\ex\\{zip_name}\")\n",
+    "                    with zipfile.ZipFile(zip_name) as zip:\n",
+    "\n",
+    "                        zip.extractall(f\"{zip_name}\")\n",
+    "                    \n",
+    "\n",
+    "\n",
     "\n",
     "            else:\n",
     "                print(\"La solicitud falló con el código de estado:\", response.status_code)\n",
@@ -382,50 +375,6 @@
     "\n",
     "#dfout.to_sql(f'{tabla_valores}', schema='dbo', con=engine, if_exists=\"replace\", chunksize=20000)\n",
     "#dfout2.to_sql(f'{tabla_contratos}', schema='dbo', con=engine, if_exists=\"replace\", chunksize=20000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "import zipfile\n",
-    "import io\n",
-    "import os\n",
-    "\n",
-    "url = \"https://api.cammesa.com/pub-svc/public/findAllAttachmentZipByNemoId?docId=FFABF73C69B006BD03258B18002191F9&nemo=DTE_EMISION\"\n",
-    "#url = \"https://api.cammesa.com/pub-svc/public/findAllAttachmentZipByNemoId?docId=FD2C3B3F0D5A9C6803258AF5000114C9&nemo=PARTE_POST_OPERATIVO\"\n",
-    "try:\n",
-    "    with requests.get(url) as response:\n",
-    "        if response.status_code == 200:\n",
-    "\n",
-    "            # Crear un objeto ZipFile a partir del contenido descargado\n",
-    "            z = zipfile.ZipFile(io.BytesIO(response.content))\n",
-    "\n",
-    "            # Directorio de destino para extraer los archivos ZIP\n",
-    "            destination_directory = \".zips\"\n",
-    "\n",
-    "            # Extraer todos los archivos del ZIP en el directorio específico\n",
-    "            z.extractall(destination_directory)\n",
-    "            zip_name = z.namelist()[0]\n",
-    "        else:\n",
-    "            print(\"La solicitud falló con el código de estado:\", response.status_code)\n",
-    "        \n",
-    "        path_zip_dia = f\".zips\\{zip_name}\"\n",
-    "\n",
-    "        #print(path_zip_dia)\n",
-    "\n",
-    "        with zipfile.ZipFile(path_zip_dia, 'r') as zip_ref:\n",
-    "            # Encontrar el nombre del archivo MDB dentro del ZIP diario\n",
-    "            #archivo_mdb = os.path.splitext(zip_name)[0] + \".mdb\"\n",
-    "            #zip_ref.extract(archivo_mdb, path=\".zips\\ex\")\n",
-    "            #print(zip_name)\n",
-    "            zip_ref.extractall(f\".zips\\ex\\{zip_name}\")\n",
-    "except requests.exceptions.RequestException as e:\n",
-    "    # Manejar la excepción\n",
-    "    print(\"Error al realizar la solicitud:\", e)"
    ]
   }
  ],
