--- a/load_diario.ipynb
+++ b/load_diario.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,26 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_10648\\1583590945.py:43: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, connection)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024-05-23\n",
-      "2024-05-26\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(ultimo_dia_bd())\n",
     "print(ultimo_dia_CAMM())"
@@ -105,18 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_6412\\1583590945.py:43: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, connection)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# DATOS DE LA BBDD, SERVER Y TABLA\n",
     "\n",
@@ -125,8 +99,9 @@
     "\n",
     "#1\n",
     "#-------------------------------------------------------#\n",
-    "tabla_valores = 'Valores_Gen_Diario_Automatico'\n",
-    "tabla_contratos = 'Contratos_Diario_Automatico'\n",
+    "tabla_valores = 'Valores_Gen_Corregidos'\n",
+    "tabla_contratos = 'Contratos_Corregidos'\n",
+    "tabla_novedades = 'NOVEDADES_Corregidos'\n",
     "\n",
     "#-------------------------------------------------------#\n",
     "\n",
@@ -159,8 +134,8 @@
     "\n",
     "#Defino la tabla de CAMMESA que me voy a traer\n",
     "\n",
-    "#NEMO = \"PARTE_POST_OPERATIVO_UNIF\"\n",
-    "NEMO = \"PARTE_POST_OPERATIVO\"\n",
+    "NEMO = \"PARTE_POST_OPERATIVO_UNIF\"\n",
+    "#NEMO = \"PARTE_POST_OPERATIVO\"\n",
     "#-------------------------------------------------------#\n",
     "\n",
     "#URL para capturar Id del documento y el zip file:\n",
@@ -191,118 +166,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_6412\\1583590945.py:43: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, connection)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024-05-15 00:00:00 2024-05-19 00:00:00\n",
-      "se realiza la acción\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from datetime import datetime\n",
-    "\n",
-    "# Convertir la cadena a un objeto datetime\n",
-    "fecha_desde_obj = datetime.fromisoformat(ultimo_dia_bd())\n",
-    "\n",
-    "fecha_hasta_obj = datetime.fromisoformat(ultimo_dia_CAMM())\n",
-    "\n",
-    "print(fecha_desde_obj, fecha_hasta_obj)\n",
-    "\n",
-    "if fecha_desde_obj < fecha_hasta_obj:\n",
-    "    \n",
-    "    print(\"se realiza la acción\")\n",
-    "else:\n",
-    "    print(\"no se realiza\")"
+    "fecha_desde = \"2023-01-01T00:00:00.000-03:00\"\n",
+    "fecha_hasta = \"2023-06-30T23:59:59.000-03:00\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Se realiza el update\n",
-      "16-05-2024\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_6412\\1670188956.py:72: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_6412\\1670188956.py:73: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17-05-2024\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_6412\\1670188956.py:72: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_6412\\1670188956.py:73: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "18-05-2024\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_6412\\1670188956.py:72: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_6412\\1670188956.py:73: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "19-05-2024\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_6412\\1670188956.py:72: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_6412\\1670188956.py:73: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if fecha_desde_obj < fecha_hasta_obj:\n",
     "    print(\"Se realiza el update\")\n",
@@ -377,6 +253,7 @@
     "            #-------------------------------------------------------#\n",
     "            valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
     "            contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n",
+    "            novedades = pd.read_sql(\"SELECT * FROM NOVEDADES\", conn)\n",
     "            #-------------------------------------------------------#\n",
     "            conn.close()\n",
     "            \n",
@@ -393,6 +270,8 @@
     "            valores_generadores.insert(0, 'FECHA', dia_mdb_formatted)\n",
     "\n",
     "            contrato_abastecimiento.insert(0, 'FECHA', dia_mdb_formatted)\n",
+    "\n",
+    "            novedades.insert(0, 'FECHA', dia_mdb_formatted)\n",
     "            #-------------------------------------------------------#\n",
     "            quoted = urllib.parse.quote_plus(connection_string)\n",
     "\n",
@@ -406,7 +285,7 @@
     "                                \"GUEMTV12\", \"GUEMTV13\", \"LDLATG01\", \"LDLATG02\", \n",
     "                                \"LDLATG03\", \"LDLATG04\", \"LDLATG05\", \"LDLATV01\", \n",
     "                                \"LDLMDI01\", \"LREYHB\", \"NIH1HI\", \"NIH2HI\", \"NIH3HI\", \n",
-    "                                \"PAMEEO\", \"PEP3EO\", \"PILBDI01\", \"PILBDI02\", \n",
+    "                                \"PAMEEO\",\"PE32EO\", \"PEP3EO\", \"PILBDI01\", \"PILBDI02\", \n",
     "                                \"PILBDI03\", \"PILBDI04\", \"PILBDI05\", \"PILBDI06\", \"PIQIDI01\", \"PPLEHI\"]\n",
     "            \n",
     "            contratos_filtrados = [\"C.T. LOMA DE LA LATA\", \"C.T.E.BARRAGAN TV-M\", \"CT LOMA II LA LATA-M\", \"GENELBA CC -MERCA\", \"PIEDRABUENA  R21-\",\"CT PILAR BS AS M\"]\n",
@@ -420,7 +299,9 @@
     "\n",
     "            df_valores = valores_generadores[valores_generadores[\"GRUPO\"].isin(valores_filtrados)]  \n",
     "            \n",
-    "            df_contratos = contrato_abastecimiento[contrato_abastecimiento[\"CONTRATO\"].isin(contratos_filtrados)] \n",
+    "            df_contratos = contrato_abastecimiento[contrato_abastecimiento[\"CONTRATO\"].isin(contratos_filtrados)]\n",
+    "\n",
+    "            df_novedades = novedades[novedades[\"GRUPO\"].isin(valores_filtrados)]\n",
     "\n",
     "            #-------------------------------------------------------#\n",
     "\n",
@@ -439,6 +320,8 @@
     "\n",
     "            df_contratos.to_sql(f'{tabla_contratos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
     "\n",
+    "            df_novedades.to_sql(f'{tabla_novedades}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "\n",
     "            #dfout = pd.concat([dfout,df_valores], ignore_index=True)\n",
     "            #dfout2 = pd.concat([dfout2, df_contratos], ignore_index=True)\n",
     "\n",
@@ -446,6 +329,7 @@
     "            \n",
     "        except FileNotFoundError:\n",
     "            print(f\"El archivo {zip_name} no se encontró. Saltando al siguiente archivo...\")\n",
+    "\n",
     "else:\n",
     "    print(f\"Última fecha en BD:{fecha_desde_obj} es igual a la última fecha del informe de CAMMESA: {fecha_hasta_obj}\\nNo se realiza el update\")\n",
     "\n",
