Novedades cargado, parque agregado, contrato agregado, vistas generadas

--- a/load_diario.ipynb
+++ b/load_diario.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
     "def ultimo_dia_bd():\n",
     "    server = 'DARCCVWSQL19'\n",
     "    database = 'TAPI'\n",
-    "    tabla = 'Valores_Gen_Diario_Automatico'\n",
+    "    tabla = 'Valores_NO_Corregidos'\n",
     "\n",
     "    connection_string = f'DRIVER=ODBC Driver 17 for SQL Server;SERVER={server};DATABASE={database};Trusted_Connection=yes;'\n",
     "\n",
@@ -78,9 +78,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_29380\\1806161161.py:43: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, connection)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-05-31\n",
+      "2024-06-03\n"
+     ]
+    }
+   ],
    "source": [
     "print(ultimo_dia_bd())\n",
     "print(ultimo_dia_CAMM())"
@@ -99,9 +116,9 @@
     "\n",
     "#1\n",
     "#-------------------------------------------------------#\n",
-    "tabla_valores = 'Valores_Gen_Corregidos'\n",
-    "tabla_contratos = 'Contratos_Corregidos'\n",
-    "tabla_novedades = 'NOVEDADES_Corregidos'\n",
+    "tabla_valores = 'Valores_NO_Corregidos'\n",
+    "tabla_contratos = 'Contratos_NO_Corregidos'\n",
+    "tabla_novedades = 'Novedades_NO_Corregidos'\n",
     "\n",
     "#-------------------------------------------------------#\n",
     "\n",
@@ -109,22 +126,22 @@
     "#-------------------------------------------------------#\n",
     "# Fechas para seleccionar el día de la carga se debe iterar\n",
     "\n",
-    "fecha_desde_obj = datetime.fromisoformat(ultimo_dia_bd())\n",
+    "# fecha_desde_obj = datetime.fromisoformat(ultimo_dia_bd())\n",
     "\n",
-    "fecha_hasta_obj = datetime.fromisoformat(ultimo_dia_CAMM())\n",
+    "# fecha_hasta_obj = datetime.fromisoformat(ultimo_dia_CAMM())\n",
     "\n",
-    "fecha_desde_bd = ultimo_dia_bd() #OJO DE QUE TABLA TOMA EL ULTIMO DIA\n",
+    "# fecha_desde_bd = ultimo_dia_bd() #OJO DE QUE TABLA TOMA EL ULTIMO DIA\n",
     "\n",
-    "fecha_datetime = datetime.strptime(fecha_desde_bd, \"%Y-%m-%d\")\n",
+    "# fecha_datetime = datetime.strptime(fecha_desde_bd, \"%Y-%m-%d\")\n",
     "\n",
-    "fecha_siguiente = fecha_datetime + timedelta(days=1) #Sumar un día\n",
+    "# fecha_siguiente = fecha_datetime + timedelta(days=1) #Sumar un día\n",
     "\n",
-    "fecha_desde = fecha_siguiente.strftime(\"%Y-%m-%d\") #Convertir de nuevo a string si es necesario\n",
+    "# fecha_desde = fecha_siguiente.strftime(\"%Y-%m-%d\") #Convertir de nuevo a string si es necesario\n",
     "\n",
-    "fecha_hasta = ultimo_dia_CAMM() #ultimo informe en API CAMMESA\n",
+    "# fecha_hasta = ultimo_dia_CAMM() #ultimo informe en API CAMMESA\n",
     "\n",
-    "fecha_desde = fecha_desde+\"T00:00:00.000-03:00\" \n",
-    "fecha_hasta = fecha_hasta+\"T23:59:00.000-03:00\"\n",
+    "# fecha_desde = fecha_desde+\"T00:00:00.000-03:00\" \n",
+    "# fecha_hasta = fecha_hasta+\"T23:59:00.000-03:00\"\n",
     "\n",
     "# fecha_desde_datetime = datetime.strptime(fecha_desde)\n",
     "# fecha_hasta_datetime = datetime.strptime(fecha_hasta)\n",
@@ -134,8 +151,8 @@
     "\n",
     "#Defino la tabla de CAMMESA que me voy a traer\n",
     "\n",
-    "NEMO = \"PARTE_POST_OPERATIVO_UNIF\"\n",
-    "#NEMO = \"PARTE_POST_OPERATIVO\"\n",
+    "#NEMO = \"PARTE_POST_OPERATIVO_UNIF\"\n",
+    "NEMO = \"PARTE_POST_OPERATIVO\"\n",
     "#-------------------------------------------------------#\n",
     "\n",
     "#URL para capturar Id del documento y el zip file:\n",
@@ -170,8 +187,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fecha_desde = \"2023-01-01T00:00:00.000-03:00\"\n",
-    "fecha_hasta = \"2023-06-30T23:59:59.000-03:00\""
+    "fecha_desde = \"2024-05-01T00:00:00.000-03:00\"\n",
+    "fecha_hasta = \"2024-05-31T23:59:59.000-03:00\"\n",
+    "fecha_desde_obj = 0\n",
+    "fecha_hasta_obj = 1"
    ]
   },
   {
@@ -331,10 +350,7 @@
     "            print(f\"El archivo {zip_name} no se encontró. Saltando al siguiente archivo...\")\n",
     "\n",
     "else:\n",
-    "    print(f\"Última fecha en BD:{fecha_desde_obj} es igual a la última fecha del informe de CAMMESA: {fecha_hasta_obj}\\nNo se realiza el update\")\n",
-    "\n",
-    "#dfout.to_sql(f'{tabla_valores}', schema='dbo', con=engine, if_exists=\"replace\", chunksize=20000)\n",
-    "#dfout2.to_sql(f'{tabla_contratos}', schema='dbo', con=engine, if_exists=\"replace\", chunksize=20000)"
+    "    print(f\"Última fecha en BD:{fecha_desde_obj} es igual a la última fecha del informe de CAMMESA: {fecha_hasta_obj}\\nNo se realiza el update\")"
    ]
   }
  ],
