--- a/dte_testing.ipynb
+++ b/dte_testing.ipynb
@@ -93,7 +93,12 @@
    "source": [
     "try:\n",
     "    with requests.get(url_zip) as r:\n",
-    "        if r.status_code == 200:\n",
+    "\n",
+    "        if r.status_code != 200:\n",
+    "            \n",
+    "            print(\"La solicitud falló con el código de estado:\", response.status_code)\n",
+    "\n",
+    "        else:           \n",
     "            \n",
     "            with zipfile.ZipFile(io.BytesIO(r.content)) as z:\n",
     "                \n",
@@ -116,9 +121,7 @@
     "                        \n",
     "                        conn_str = f\"Driver={{Microsoft Access Driver (*.mdb, *.accdb)}};DBQ={mdb_file};\"\n",
     "                        conn = pyodbc.connect(conn_str)\n",
-    "                \n",
-    "        else:\n",
-    "            print(\"La solicitud falló con el código de estado:\", response.status_code)\n",
+    "\n",
     "\n",
     "except requests.exceptions.RequestException as e:\n",
     "    # Manejar la excepción\n",
@@ -142,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
