--- a/dte_testing.ipynb
+++ b/dte_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,51 +77,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".zips\\DTE2404.zip\n",
-      "None\n",
-      "DTE2404\n"
+      "['DTE2404.zip', 'FONINVEMEM2404.txt']\n",
+      "DTE2404.zip\n"
      ]
     }
    ],
    "source": [
+    "zip_path = \".zips\"\n",
+    "mdb_path = \".zips/.mdb\"\n",
+    "\n",
     "try:\n",
     "    with requests.get(url_zip) as r:\n",
     "\n",
-    "        if r.status_code != 200:\n",
-    "            \n",
+    "        if r.status_code == 200:\n",
+    "            with zipfile.ZipFile(io.BytesIO(r.content)) as primer_zip:\n",
+    "                z = primer_zip\n",
+    "                print(z.namelist())\n",
+    "                print(z.namelist()[0])\n",
+    "                DTE_fecha = z.namelist()[0][:7]\n",
+    "\n",
+    "                # print(DTE_fecha)\n",
+    "\n",
+    "                # os.mkdir(path=path)\n",
+    "                #z.extractall(path=path) #Extraer todos los archivos del primer .zip\n",
+    "        else:\n",
+    "\n",
     "            print(\"La solicitud falló con el código de estado:\", response.status_code)\n",
     "\n",
-    "        else:           \n",
-    "            \n",
-    "            with zipfile.ZipFile(io.BytesIO(r.content)) as z:\n",
-    "                \n",
-    "                directory = f\"{z.namelist()[0]}\"\n",
-    "\n",
-    "                # Parent Directory path\n",
-    "                parent_dir = \".zips\"\n",
-    "                # Path\n",
-    "                path = os.path.join(parent_dir, directory)\n",
-    "        \n",
-    "                # os.mkdir(path=path)\n",
-    "                # # Extraer todos los archivos del ZIP en el directorio específico\n",
-    "                # z.extractall(path=path)\n",
-    "                print(path)\n",
-    "                print(z.filename)\n",
-    "                print(directory[:7])\n",
-    "\n",
-    "                with zipfile.ZipFile(file=f\"{path}\\{directory}\") as myzip:\n",
-    "                    with myzip.open(f'{directory[:7]}.mdb') as myfile:\n",
-    "                        \n",
-    "                        conn_str = f\"Driver={{Microsoft Access Driver (*.mdb, *.accdb)}};DBQ={mdb_file};\"\n",
-    "                        conn = pyodbc.connect(conn_str)\n",
-    "\n",
+    " \n",
     "\n",
     "except requests.exceptions.RequestException as e:\n",
     "    # Manejar la excepción\n",
